[gd_scene load_steps=3 format=2]

[ext_resource path="res://Thiccross/Board/Cell/Cell.tscn" type="PackedScene" id=1]
[ext_resource path="res://Thiccross/Board/Cell/CellToy.gd" type="Script" id=2]

[node name="CellToy" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Cell" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -31.0
margin_top = 9.0
margin_right = 9.0
margin_bottom = 49.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0

[node name="is_dirty" type="Label" parent="VBoxContainer"]
margin_right = 256.0
margin_bottom = 14.0
align = 1
valign = 1

[node name="is_on" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 256.0
margin_bottom = 32.0
align = 1
valign = 1

[node name="is_excluded" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 256.0
margin_bottom = 50.0
align = 1
valign = 1
